--- a/gb/25/7/28/n14562189.md
+++ b/gb/25/7/28/n14562189.md
@@ -26,28 +26,28 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435445.md#1">珀斯房产投资长期收益稳定四区</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534620.md#1">珀斯房租澳洲排名第二</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/25/n10085548.md#1" target="_blank">郑兢业：人吃与吃人（一 ）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/11/n8581915.md#1" target="_blank">76岁中医求道40年终获至宝 发乌黑身如燕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/20/n11600972.md#1" target="_blank">【历史回眸】赵紫阳赞港英统治模式和蒋经国</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/21/n11398694.md#1" target="_blank">7·20华府演讲 大卫·乔高：中共是杀人犯</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/31/n14626955.md#1">“放下之后，你且看他” 读《过松源晨炊漆公店》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613873.md#1">人在画中游 是梦境还是仙境？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/31/n14627235.md#1">把苦熬成甜 把山走成路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/4/9/27/n672344.md#1">肉身不腐的奇迹——圣塞西莉亚的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626157.md#1">乐在其中的生命境界——解读陶渊明《五柳先生传》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628772.md#1">【直播】川普前往白宫 在空军一号与记者交谈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/24/n13809314.md#1">【神韵早期节目】彝韵神舞（2013年制作）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627802.md#1">【直播】布朗斯通研究所第五届年会暨庆典</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627763.md#1">【军事情报局】台湾强弓飞弹 即将部署澎湖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627880.md#1">大陆白酒市场萎靡 牛栏山二锅头20元也卖不动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627827.md#1">韦伯望远镜揭3I/ATLAS厚厚辐射外壳 释何信号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627840.md#1">林心如曝霍建华很节省 但对家人很慷慨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627830.md#1">台知名音乐人屠颖在粤下榻酒店猝逝 终年62岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627892.md#1">王祖贤与粉丝合照 曝昔日穿高跟鞋对戏男星秘辛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628907.md#1">赵露思推全新英语歌 获Lady GaGa班底助攻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628867.md#1">39岁大陆男星李茂自曝：去年被亲戚骗光积蓄</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627721.md#1">【摄影天地】褐喉食蜜鸟在花间的俏丽身影</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/2/n14628003.md#1">研究证实 每天获得拥抱的人比较不会忧郁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628313.md#1">香烤马铃薯料理 全家人都爱吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/2/n14628139.md#1">【美食天堂】泰式蟹肉炒饭～只需10分钟！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628537.md#1">为何男性要比女性多运动 才有相同护心效果？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651306.md#1">【军事情报局】普京拒绝和平 乌军还在红军村</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651278.md#1">【新闻大家谈】美国家安全战略 把台湾推向高处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650097.md#1">花滑大奖赛总决赛 华裔天才少女一举夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649691.md#1">《阿凡达3》官宣中文配音 豪华阵容引期待</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646629.md#1">厨房锅具摆放一目了然 轻松下厨不费力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/7/28/n14562189.htm">珀斯房市出现两极化 业主喜忧参半</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/7/28/n14562189.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
