--- a/gb/24/12/25/n14397701.md
+++ b/gb/24/12/25/n14397701.md
@@ -16,12 +16,18 @@
 <p>洪申翰指出，中央整体少掉3,753亿元，平均非法定支出使用上会少掉将近三成，过去由中央出钱协助劳工的重要计划恐出现财务缺口，但也不希望劳工使用权益受到影响，就这部分确实感到忧虑。◇</p>
 <p>责任编辑：玉珍</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273961.md#1">台成立全防会 吴钊燮：吓阻区域中破坏和平野心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276933.md#1">会美USCC访团 吴钊燮吁共同谴责中共法律战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14323112.md#1">立法院新会期 民众党提多项优先法案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396736.md#1">立院通过财划法 基隆议长：不该只有多数暴力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396878.md#1">不解提前急修《财划法》原因 陈其迈：盼立院主动复议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652714.md#1">海鲲号测试延宕 海军证实：11月起每日罚19万元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652690.md#1">美国松绑H200输中令 传辉达开发晶片定位技术 将助美国落实出口管制</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652665.md#1">中共复合式威胁 赖清德：守护民主刻不容缓</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652670.md#1">防红色资金渗透 国军急难贷款明年初上路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652617.md#1">中共网路介选 沈有忠揭千笔消费假账号潜伏</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/7/n10834918.md#1" target="_blank">曾伯炎：杀母红卫兵孔繁路的悲剧</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/20/n11268195.md#1" target="_blank">以色列母亲修大法学会聆听 亲子关系更融洽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/14/n9840046.md#1" target="_blank">林辉：影射“毛太阳”《十万个为什么》被批</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/14/n11111708.md#1" target="_blank">美国务院人权新报告 多次提中共迫害法轮功</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
