--- a/gb/24/12/26/n14398461.md
+++ b/gb/24/12/26/n14398461.md
@@ -17,12 +17,18 @@
 <p>马文君强调，问题是高层或国防部不重视国防政策、资源分配不均或根本不重视影响最大的编现比等问题，造成军方一直不断购买武器装备，但却没人可以操作，这才是最重要的问题。尤其军方过去对于编现比不足的问题总是不谈，现在才想借此突显编现比问题，不过最大关键其实是军方招不到人或招进来了很快就退伍，这才是编现比不足的最大问题。</p>
 <p>责任编辑：郑桦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397696.md#1">财划法修正 台劳长：劳保拨补、育婴津贴有潜在影响</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397701.md#1">财划法修法 吴钊燮：国防预算恐少800亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652714.md#1">海鲲号测试延宕 海军证实：11月起每日罚19万元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652690.md#1">美国松绑H200输中令 传辉达开发晶片定位技术 将助美国落实出口管制</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652665.md#1">中共复合式威胁 赖清德：守护民主刻不容缓</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652670.md#1">防红色资金渗透 国军急难贷款明年初上路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652617.md#1">中共网路介选 沈有忠揭千笔消费假账号潜伏</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652524.md#1">台湾查获黑帮设公司跨国洗钱2亿美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652455.md#1">小红书今年涉诈案756件 台警方揭诈骗手法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652505.md#1">未经申请网购医疗器材 高市卫生局1年查获52件</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/28/n11552181.md#1" target="_blank">林辉：中共70年来卖国黑历史</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/17/n10491587.md#1" target="_blank">《共产党宣言》是共产邪灵向人类的宣战书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/2/27/n4375491.md#1" target="_blank">归宇斌: 江泽民导演天安门伪火的两个意图</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
