--- a/gb/24/12/30/n14401368.md
+++ b/gb/24/12/30/n14401368.md
@@ -13,12 +13,18 @@
 <p>数位市场竞争方面，国民党立委郑正钤认为，日本、美国、欧盟都对Google进行数位垄断调查，因为数位垄断效果大于实体经济，但台湾却没有任何行动，是否法令不够完备。公平会主委李镁回应，数位平台有“大者恒大”的高度集中化问题，目前法规够用，但执法上如何精进可以讨论。◇</p>
 <p>责任编辑：昌英</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397696.md#1">财划法修正 台劳长：劳保拨补、育婴津贴有潜在影响</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397701.md#1">财划法修法 吴钊燮：国防预算恐少800亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397704.md#1">财划法恐重编总预算？ 台财长：已在立院审议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398461.md#1">财划法修法 国防部：恐影响军人调薪方案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399333.md#1">《财划法》修正 教育部忧影响免学费政策、育儿津贴</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652694.md#1">金管会明年不赴中金检 新南向成海外监理焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652688.md#1">护盘能量不足？国安基金拟扩编至1兆元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652712.md#1">财划法陷僵局 庄翠云盼导正走偏的火车</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651865.md#1">台11月出口640亿美元 超越韩国 对美出口暴增</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651858.md#1">万宝华：台湾明年Q1就业展望 观光业仍缺工</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/27/n10093465.md#1" target="_blank">林辉：江青法庭辩护词透露的真相</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/8/n11370721.md#1" target="_blank">爱德华?斯考特: 对迫害善良的一个政治上的回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11242732.md#1" target="_blank">【征文】张东园：孔子为什么不是无神论？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/14/n3683060.md#1" target="_blank">【石静笛】：网在收！活摘器官再成舆论焦点</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
